# block-ciphers

aes/aes-armv8/: Cargo.toml
aes/aes-armv8/benches/: aes128.rs  aes192.rs  aes256.rs
aes/aes-armv8/src/: expand.rs  impls.rs  lib.rs
aes/aes-armv8/tests/: mod.rs
