[package]
name = "aes-armv8"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "AES (Rijndael) block ciphers implementation using ARM crypto extension"
documentation = "https://docs.rs/aes-armv8"
repository = "https://github.com/RustCrypto/block-ciphers"
keywords = ["crypto", "aes", "rijndael", "block-cipher"]
categories = ["cryptography", "no-std"]

[dependencies]
block-cipher-trait = "0.6"
opaque-debug = "0.2"

[dev-dependencies]
block-cipher-trait = { version = "0.6", features = ["dev"] }

[features]
nocheck = []

[workspace]

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=+crypto"]
rustdoc-args = ["-C", "target-feature=+crypto"]
